Fixed spacing on input box

--- a/style.css
+++ b/style.css
@@ -19,3 +19,11 @@ select {
     margin-left: auto;
     margin-right: 0;
 }
+
+#PLN{
+    margin-left: 4rem;
+}
+
+#from-currency {
+    margin-left: 2rem;
+}
